--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "paquete Sass para el curso",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test   specified\" && exit 1",
+    "built-css": "node-sass --include-path scss sass/main.scss css/destinoScss.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
     "type": "git",
